Skip to content

[VLC-4] vlc_dialog_wait_question is broken

VLC 4: dialog seems to be broken and due to "wait for question" the media player stalls.

Steps to reproduce:

vlc -vvv https://self-signed.badssl.com/
  • Observe:
    • That the dialog box is not showing.
    • If we do it with VLC-3 a dialog box will be shown asking if you trust this certificate.

Although this reproducer is shown with GNUTLS, I originally found this bug while working with vlc_dialog_wait_question inside demux/mkv.

Related log that may help debug:

[0000021b37776600] [qt] qt generic debug: on_player_state_changed VLC_PLAYER_STATE_STARTED
[0000021b37f7d480] gnutls tls client debug: TLS handshake complete
[0000021b37f7d480] gnutls tls client debug:  - safe renegotiation (RFC5746) enabled
[0000021b37f7d480] gnutls tls client debug:  - false start (RFC7918) enabled
[0000021b37f7d480] gnutls tls client error: Certificate verification failure: The certificate is NOT trusted. The certificate issuer is unknown.
[0000021b37f7d480] gnutls tls client debug: 1 certificate(s) in the list
[0000021b37f7d480] gnutls tls client debug: no known certificates for self-signed.badssl.com
[0000021b37776600] [qt] qt generic warning: (default) QObject::connect: Cannot queue arguments of type 'QuestionType'
(Make sure 'QuestionType' is registered using qRegisterMetaType().)
[0000021b3e0dbe10] upnp services discovery warning: search timeout
[0000021b3e0dbe10] upnp services discovery warning: search timeout

(From the log, there seems to be an issue with QT's handling of questions)

Tested on:

  • Debian build on recent master
  • Windows nightly, May 15, 2025
  • Flatpak build (with !7297) on recent master
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information