qt: register QuestionType meta type

Questiontype dialog boxes fail and media player halts whenever a
question dialog is triggered. This patch fixes it.

Fixes #29207

Co-authored-by: Fatih Uzunoglu <fuzun54@outlook.com>